<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.monthlywriting.daily.viewmodel.DailyWritingAddMemoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".daily.main.DailyWritingAdd"
        android:background="@drawable/daily_background"
        android:paddingTop="56dp"
        android:paddingHorizontal="30dp"
        android:paddingBottom="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/daily_writing_item_frame"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="1"
                android:layout_margin="32dp"
                android:contentDescription="@string/description_save_writing"
                android:src="@drawable/save_button_white"
                android:id="@+id/daily_memo_save"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="0"
                android:layout_margin="32dp"
                android:contentDescription="@string/description_cancel_writing"
                android:src="@drawable/back_button_left_white"
                android:id="@+id/daily_memo_cancel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_add_memo"
                    android:textSize="@dimen/title_add_memo"
                    android:gravity="center"
                    android:layout_margin="20dp"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/description_add_memo_date"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:textColor="@color/white"
                        android:id="@+id/daily_memo_month"/>

                    <NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:value="@={viewModel.date}"
                        android:id="@+id/daily_memo_date" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_content"
                    android:layout_margin="20dp"
                    android:textColor="@color/white" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    android:text="@={viewModel.content}"
                    android:hint="@string/hint_content"
                    android:id="@+id/daily_memo_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_photo"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/add_photo_24_black"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/description_add_memo_photo"
                        android:scaleType="fitCenter"
                        android:id="@+id/daily_memo_photo"/>
                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="96dp"
                    android:layout_marginHorizontal="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/description_add_memo_photo"
                        android:scaleType="center"
                        android:background="@drawable/white_underline"
                        android:adjustViewBounds="true"
                        app:imgBitmap="@{viewModel.photo}"/>
                </ScrollView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>