<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    app:cardElevation="5dp"
    android:backgroundTint="#CCC3C3"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/description_memo_bullet"
                android:layout_marginEnd="10dp"
                android:src="@drawable/note_black"
                android:id="@+id/daily_memo_bullet"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/daily_memo_bullet"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:id="@+id/daily_memo_date"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/daily_memo_date"
                android:src="@drawable/photo_black"
                android:layout_gravity="center"
                android:contentDescription="@string/description_memo_is_photo"
                android:layout_marginHorizontal="5dp"
                android:id="@+id/daily_memo_is_photo"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/delete_black_24"
                android:layout_gravity="center"
                android:contentDescription="@string/description_memo_delete"
                android:layout_marginHorizontal="5dp"
                android:id="@+id/daily_memo_delete"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:id="@+id/daily_memo_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="30dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>