<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.monthlywriting.daily.viewmodel.DailyWritingDetailMemoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".daily.bottomsheet.DailyWritingDetailMemo"
        android:background="@drawable/daily_background"
        android:paddingTop="56dp"
        android:paddingHorizontal="30dp"
        android:paddingBottom="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/daily_writing_item_frame_without_padding"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="0"
                android:layout_margin="32dp"
                android:contentDescription="@string/description_cancel_writing"
                android:src="@drawable/ic_baseline_arrow_back_32"
                android:id="@+id/daily_detail_memo_cancel"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="0"
                android:layout_margin="32dp"
                android:contentDescription="@string/description_cancel_writing"
                android:src="@drawable/ic_baseline_arrow_back_32"
                android:id="@+id/daily_detail_memo_cancel_edit"
                android:visibility="gone"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="1"
                android:layout_margin="32dp"
                android:contentDescription="@string/description_save_writing"
                android:src="@drawable/ic_baseline_done_32"
                android:id="@+id/daily_detail_memo_save"
                android:visibility="gone"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="1"
                android:layout_margin="32dp"
                android:contentDescription="@string/description_edit_writing"
                android:src="@drawable/ic_baseline_edit_note_32"
                android:id="@+id/daily_detail_memo_edit"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="96dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_detail_memo"
                        android:textSize="@dimen/title_detail_memo"
                        android:gravity="center"
                        android:layout_margin="20dp"
                        android:textColor="@color/white"
                        android:id="@+id/daily_detail_memo_title"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:textColor="@color/white"
                        android:id="@+id/daily_detail_memo_date"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="20dp"
                        android:textSize="@dimen/detail_memo_content"
                        android:backgroundTint="@color/white"
                        android:inputType="text"
                        android:importantForAutofill="no"
                        android:text="@={viewModel.content}"
                        android:hint="@string/hint_content"
                        android:id="@+id/daily_detail_memo_content"
                        style="@style/black_edittext"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="96dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/description_detail_memo_photo"
                        android:scaleType="center"
                        app:imgBitmap="@{viewModel.photo}"
                        android:id="@+id/daily_detail_memo_photo"/>

                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>